--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,16 @@
+
+html, body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.map-container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
