--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,32 @@ html, body {
   margin: 0;
   width: 100%;
   height: 100%;
+}
+
+.map-container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+html, body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.map-container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+html, body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
   background-color:black;
   color:white;
 }
