--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,6 +1,15 @@
 <ac-map [flyTo]="flyToOptions">
-    <ac-map-layer-provider [provider]="map.provider" [options]="map.options"></ac-map-layer-provider>
-    <ac-layer acFor="let plane of planes$" [context]="this">
-        <ac-billboard-desc props="{image:plane.image,position:plane.position,rotation:plane.rotation,scale:plane.scale}"></ac-billboard-desc>
-    </ac-layer>
+  <ac-map-layer-provider
+    [provider]="map.provider"
+    [options]="map.options"
+  ></ac-map-layer-provider>
+  <ac-layer acFor="let plane of planes$" [context]="this">
+    <ac-polyline-primitive-desc
+    props="{width:2,positions:plane.trail,material:plane.material}"
+  ></ac-polyline-primitive-desc>
+    <ac-billboard-desc
+      props="{image:plane.image,position:plane.position,rotation:plane.rotation,scale:plane.scale}"
+    ></ac-billboard-desc>
+    
+  </ac-layer>
 </ac-map>
