--- a/src/app/lobby/container/lobby.component.html
+++ b/src/app/lobby/container/lobby.component.html
@@ -1,4 +1,6 @@
+<div class="timer" *ngIf="lobbyTimerState$ | async">Time until game starts: {{timer}}</div>
 <div class="container">
+    
     <div class="your-profile">
         <h3>Its you!</h3>
         <app-player *ngIf="currentPlayer$ | async" [player]="currentPlayer$ | async" [currentPlayer]="true"></app-player>
