--- a/src/app/lobby/container/lobby.component.scss
+++ b/src/app/lobby/container/lobby.component.scss
@@ -1,3 +1,14 @@
+.timer {
+    position:fixed;
+    padding:10px;
+    text-align:center;
+    font-size:26px;
+    top:0;
+    left:0;
+    width:100%;
+    height:100px;
+    
+}
 .container {
     display:flex;
     width:50%;
@@ -11,6 +22,7 @@
     height:750px;
     overflow: scroll;
     overflow-x: hidden;
+    
     .your-profile{
         flex:1;
         padding:10px;
